Issue #4 - start styling the page-footer template part. Remove alignleft and alignright CSS copied from Stanley

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description: Fizzie theme - a Full Site Editing theme using Gutenberg blocks
 Author: Bobbing Wide
 Author URI: https://www.oik-plugins.com/author/bobbingwide
 Version: 0.0.1
-Tags: blocks, Gutenberg, FSE
+Tags: blocks, Gutenberg, FSE, oik
 Requires at least: 5.5.1
 Requires PHP: 7.3
 License: GPL-2.0+
@@ -21,7 +21,7 @@ body {
     color: #1a1a2a;
     margin:0;
     background-color: #f5f5f5;
-    line-height: 1em;
+    line-height: 1.2em;
 }
 
 a {
@@ -82,6 +82,8 @@ h2, h2 a, h2 a:visited, h3, h3 a, h3 a:visited {
     padding: 0;
     background-color: #ffffff;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+    z-index: 9999;
+    position: sticky;
 
 }
 
@@ -109,6 +111,14 @@ h2, h2 a, h2 a:visited, h3, h3 a, h3 a:visited {
 .footer .wp-block-navigation li {
     display: inline-block;
 }
+
+.page-footer .wp-block-columns p {
+    color: #aaa;
+}
+.page-footer .wp-block-columns a {
+    color: #e9e9c8;
+}
+
 
 .wp-block-group.page,
 .wp-block-group.post {
@@ -165,13 +175,14 @@ img {
 }
 
 /*--------------------------------------------------------------
-# Alignments
+# Alignments - these came from Stanley but aren't as good as we want.
 --------------------------------------------------------------*/
-
+/* Let's work to make this !important unnecessary
 .alignleft,
 .alignright {
-    max-width: 580px !important;  /* Let's work to make this !important unnecessary */
+    max-width: 580px !important;
 }
+
 
 .alignleft img,
 .alignright img,
@@ -180,6 +191,8 @@ img {
     max-width: 50%;
     width: 50%;
 }
+
+ */
 
 .alignleft figcaption {
     clear: left;
